Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "" # Enter your telegram bot token
-OWNER_ID = "" # Enter your telegram user id
-TELEGRAM_API = "" # Enter telegram API key
-TELEGRAM_HASH = "" # Enter telegram API hash
+BOT_TOKEN = "7181581334:AAERV_LrMrlwVAOw8No7iqGMycjoG-kbwo0" # Enter your telegram bot token
+OWNER_ID = "7402636835" # Enter your telegram user id
+TELEGRAM_API = "20186620" # Enter telegram API key
+TELEGRAM_HASH = "e191a14fe7287f4baaaa355d2ad77988" # Enter telegram API hash
 
 # OPTIONAL CONFIG
 AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
 SUDO_USERS = "" # Enter telegram user id for sudo access
 
-DATABASE_URL = "" # Enter mongo database URL for python 3.12 or higher
+DATABASE_URL = "mongodb+srv://romensi:romensix@cluster0.a251z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" # Enter mongo database URL for python 3.12 or higher
 USER_SESSION_STRING = "" # Check readme to learn how to generate this
 
 # Optional API
